fixes image position on mobile

--- a/css/main-2.0.css
+++ b/css/main-2.0.css
@@ -248,7 +248,7 @@ i.scroll:hover {
 @media (max-width: 768px) {
 
   .header {
-	background: url(../img/background-city-night.jpg) no-repeat center center scroll;
+	background: url(../img/background-city-night.jpg) no-repeat top center scroll;
   }
 
   .callout {
